--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -12,6 +12,7 @@ The navy needed to know where they could reasonably expect a favorable reception
 - 10 August 1801: [James Leander Cathcart]() sees a British conspiracy around every corner: "I imagine [the Tripolitan admiral] was encouraged by his friends Lucas & McDonogh who were continually intoxicated together" (BW1:545-46)
 
 - 15 August 1801: Spanish are actually the ones taking American ships, according to 2Lt. [John Johnson](), on board the [USS *Philadelphia*]() off Gibraltar (BW1:550)
+    - 1 October 1801: [Richard Dale]() writes, "if the citizens, of the United States is suffered to be treated in this manner by those small Gun boats & Privatiers of a nation that protends to be in friendship; they had much better be at open war" (BW1:589)
 
 - 28 September 1801: French took several American vessels as prize in the Mediterranean (BW1:585)
 
