--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -2,6 +2,7 @@ One of the constant questions for the squadron was whether to get supplies from 
 
 ## From America
 - BW1:548: *American Packet* dispatched from Washington DC to Gibraltar with supplies for squadron, 14 August 1801
+    - BW1:594-95: *American Packet* captured by Spanish privateers and brought to Algeciras, 5 October 1801; she turns out to have been carrying some private cargo as well (which was a violation of the blockade? [Richard Dale]() seems to think this was a problem and an ethical violation; not quite sure why).
 
 
 ## In the Mediterranean
