--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -20,5 +20,6 @@ The navy needed to know where they could reasonably expect a favorable reception
 
 # Cooperation amongst European nations
 - BW1:576: [James Leander Cathcart]() discourages a coalition with Sweden, on the basis that he does not want to share the glory and honor of setting an example with the Barbary states (see [Honor]()), 17 September 1801
+    - BW1:599: Despite Cathcart's objections, N. [Frumerie]() writes to [William Eaton]() that the Swedes have been ordered by the king to cooperate with the Americans against Tripoli and so a squadron of 3 frigates and a cutter brig are coming to the Med for that purpose, as well as providing convoy duty for American vessels, 14 October 1801
 
 - 28 August 1801: Danish commodore will not swap information with [Richard Dale](), though [Nicholas Nissen]() has been a help to the squadron (BW1:562)
