--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -11,12 +11,14 @@ The navy needed to know where they could reasonably expect a favorable reception
 
 - 10 August 1801: [James Leander Cathcart]() sees a British conspiracy around every corner: "I imagine [the Tripolitan admiral] was encouraged by his friends Lucas & McDonogh who were continually intoxicated together" (BW1:545-46)
 
-- 15 August 1801: Spanish are actually the ones taking American ships, according to 2Lt. [John Johnson](), on board the [USS *Philadelphia*]() off Gibraltar (BW1:550)
-    - 1 October 1801: [Richard Dale]() writes, "if the citizens, of the United States is suffered to be treated in this manner by those small Gun boats & Privatiers of a nation that protends to be in friendship; they had much better be at open war" (BW1:590)
-
 - 28 September 1801: French took several American vessels as prize in the Mediterranean (BW1:585)
 
+## Spain/Algeciras
+- 15 August 1801: Spanish are actually the ones taking American ships, according to 2Lt. [John Johnson](), on board the [USS *Philadelphia*]() off Gibraltar (BW1:550)
 - 28 September 1801: [Richard Dale]() writes to the governor of Algeciras (Spain) asking for an explanation of his conduct toward American merchant vessels and his refusal to allow the [USS Philadelphia]() to dock at Algeciras: "it was expected that the United States was at Peace with all the World" (BW1:586)
+- 1 October 1801: [Richard Dale]() writes, "if the citizens, of the United States is suffered to be treated in this manner by those small Gun boats & Privatiers of a nation that protends to be in friendship; they had much better be at open war" (BW1:590)
+- 18 October 1801: [Richard Dale](): "If there is not a stop put to such nefarious conduct as is carried on here at present, towards the Americans there is no knowing where it will end, particularly as the Owners of the Privatiers and Privatiersmen, have to pay no damages let them be ever so wrong in their conduct, It is very strange to me, that the King of Spain suffers such nefarious conduct to be carried on under his Flag. It is a disgrace to the nation, It is said that Gibraltar is in a state of Blockade, it must be a Blockade of Privatiers for there is not a Kings Vessel of any discription, to be seen at sea" (BW1:600)
+
 
 # Cooperation amongst European nations
 - BW1:576: [James Leander Cathcart]() discourages a coalition with Sweden, on the basis that he does not want to share the glory and honor of setting an example with the Barbary states (see [Honor]()), 17 September 1801
