--- a/Economy.page
+++ b/Economy.page
@@ -35,3 +35,7 @@
 
 ## Split duties
 - Not only was the navy supposed to fight the war, but they were often also called upon for convoy duty, which was purely for the peace of mind of the American merchants in the Med. 
+
+## Barriers to commerce: corsair tactics
+- BW1:602: Report that some Tripoline corsairs have taken English papers and Minorcan crews in order to avoid search and seizure by the American squadron, 24 October 1801
+- 
