--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -13,4 +13,4 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW1:587: [Daniel McNeill]() ordered to take minister to a French port, possibly Havre or L'Orient, and get water, bread, and spirits there, Oct. 1, 1801
 - BW1:591: [Richard Dale](): "my Provisions being nearly Expended I proceeded for this place [Gibraltar](), Expecting to find a store ship, from America with stores, I am sorry to say, that I am disappointed I shall wait a few days, if she dos not arrive in that time, I can get supplyed with what I want from His Majestys Magazines, this Garrison is very Friendly and attentive to the Squadron," 1 October 1801
 - BW1:595: [Richard Dale]() calls on the dockmaster at Gibraltar to honor the agreement issed by the king and asks for a new foresail fore and a new main topsail, 5 October 1801 (they oblige on Oct 7, BW1:596)
-- 
+- BW1:603: Dale instructs [Samuel Barron]() that Syracuse is a good place to get supplies, "you may get every supply that you may want in the, Eating way, and that very cheap," 25 October 1801
