--- a/USS Essex.page
+++ b/USS Essex.page
@@ -1,3 +1,4 @@
 ## [William Bainbridge]()
 - 4 July 1801: Ordered to Tunis with a convoy and stores for the bey (BW1:500)
 - 17 July 1801: Ordered to Barcelona to convoy American merchants down the Mediterranean (BW1:515)
+- 25 October 1801: Ordered to stay near Gibraltar to continue to hold the two Tripolitan corsair vessels in port, only leaving for short convoy duty if necessary (BW1:605)
