end of cruise 1

--- a/Strategy.page
+++ b/Strategy.page
@@ -1,5 +1,4 @@
-- BW1:429: [Samuel Smith]() to [Thomas Truxtun](), 10 April 1801: "The Object of the squadron are
-instructions to our young Officers or to carry into Execution the Law fixing the Peace Establishment of the U. S. It is Concieved also that such a squadron Cruizing in view of the Barbary Powers will have a tendency to revent them from seizing on our commerce, whenever Passion or a desire of Plunder might Incite them thereto."
+- BW1:429: [Samuel Smith]() to [Thomas Truxtun](), 10 April 1801: "The Object of the squadron are instructions to our young Officers or to carry into Execution the Law fixing the Peace Establishment of the U. S. It is Concieved also that such a squadron Cruizing in view of the Barbary Powers will have a tendency to revent them from seizing on our commerce, whenever Passion or a desire of Plunder might Incite them thereto."
 
 ## Stores
 - One of the key elements of the blockade is having enough supplies; where do these supplies come from?
@@ -17,7 +16,9 @@ This feeling of pointlessness was shared by the crew as well, e.g., [William Tur
 - [Deterrence]()
 - [Encouragement]()
 
-Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desire proved impossible to fulfill
+Dale wanted to keep a ship off Tripoli at all times (see BW1:521), but this desire proved impossible to fulfill.
+
+By the end of the first cruise, Dale had a different perspective: "It is very pleasing to me, that you should think, that the Squadron under my command has been so arranged, and conducted, as to have baffled the Intentions, of thc Bey of Tripoli and his Admiral, It has been my pride, from the first of my arrival in those Seas, as well as the Commanders that I have had the Honor to Command, to Empress on the minds of those people, also, the European Nations, what the Government of the United States can do - and will do, I hope, when drove to act in a hostile manner" (BW1:611, letter to [David Humphreys](), 28 October 1801). 
 
 # Blockade
 - [Legal definition of blockade]()
