--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -22,6 +22,7 @@ The navy needed to know where they could reasonably expect a favorable reception
 - The Americans continue to have problems with Spain: The fortification at St. Roque attacked two American vessels, killing one man, in October 1801, whereupon [Richard Dale]() wrote to the governor, stating "I
 cannot help observing to your Excellency that I conceive such conduct
 more resembles the Savages than a civilized nation." (BW1:609)
+    - **Important**: Dale puts all the blame for this on the governor of St. Roque, and does not want to believe that this behavior is sanctioned by the king** (see BW1:611).
 
 
 # Cooperation amongst European nations
