--- a/Strategy.page
+++ b/Strategy.page
@@ -37,3 +37,5 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 - First mention of [William Eaton]()'s plan to overthrow [Yusuf Karamanli](), 5 September 1801 (BW1:569)   
 
 # [Convoy]() duty
+
+# [Tripolitan strategy]()
