--- a/Convoy.page
+++ b/Convoy.page
@@ -5,3 +5,6 @@ One of the important but boring duties of the American squadron was to convoy Am
 ## Irritations and delays
 ### Lack of ships to perform duty
 - BW1:593: [Richard Dale]() to [William Kirkpatrick](): "it is my wish and Intention to give protection to all American Vessels, Either bound up the Mediterranean or down, as much, as in my Power lays, but the Commanders must have patience, I have to observe to you there is only three Ships of War in those seas at present belonging to the United States, one of them must be kept in or about this place, one off and about Tripoli so you see there is only one to go on the convoy Business."
+
+### Difficulty of wrangling merchants
+- BW1:615: [Richard Dale](): "it is Impossible to keep a number of Merchant ships togeather, in bad weather and long nights [during the winter]" (6 Nov 1801)
