--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -2,3 +2,11 @@
 - [Richard Dale]() urges [William Eaton]() to make sure the Tunisians have appropriate papers from the government to avoid detention and capture by the American squadron, since he can't tell Tunisians and Tripolitans apart on sight, and he has not been restrictive enough in the past (BW1:556)
 - [Richard O'Brien]() informs the Secretary of State that Algiers has requested that he issue passports for the crews of the Tripolitan vessels blockaded at Gibraltar by the navy. He declines, reminding the dey that he wouldn't want to set a precedent of breaking the customary blockading practices, as it might come back to bite Algiers. 26 Sept 1801 (BW1:581)
 - 
+
+## Passports
+Passports were a sticking point between the USA and all of the Barbary regencies. I'm still not quite sure how the system worked, since half of the passport was kept on shore and the other half was purportedly given to ships' captains; did all ships in a navy get a stack of passports? Did they go through them every time they stopped a ship? These things seem unlikely. But giving or withholding passports seems to have been a potent form of diplomatic power, even though there was trickery and skepticism on both sides about the legitimacy of passes.
+
+(This also leads me to believe that the volume of ship traffic was not extraordinarily high, if they could issue a passport to every single ship coming into the Med.)
+
+- Example of using passports for diplomatic force: [Richard O'Brien]() refused to issue passports to Algiers for Tripolitan ships docked in an Algerian port; therefore he did not wish to ask the Dey of Algiers for a passport for the *Peace and Plenty*, delivering tribute payments to Tunis. Therefore, the *George Washington* had to convoy the *Peace and Plenty* to Tunis in order to prevent capture.
+    - O'Brien did not like this; he wanted to show "him and his Ministry both Turkish and Jewish ... that we finally would make force to be our passport." (BW1:616, 8 Nov 1801)
