--- a/Strategy.page
+++ b/Strategy.page
@@ -31,6 +31,7 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 - Eaton warns Dale that the Tripolitan admiral and his crews are trying to run the blockade by going home from Gibraltar in a Greek ship they have chartered for the purpose (BW1:566)
 - Dale tells Eaton that it's vital that the Tunisians think there is still a ship off Tripoli, even though there is not in fact a ship there (BW1:571)
 - Intelligence between ports on how the Tripolitans are trying to thwart the blockade is surprisingly good (see [James Leander Cathcart]()'s circular about the ambassador to Morocco's attempts to smuggle wheat into Tripoli, 11 September 1801, BW1:573-74)
+- [Richard O'Brien](), worried that the Tripolitan crews blockaded in Gibraltar would figure out that there was no one actually blockading them in, and would get out via Oran to become "an Enemy in the rear" of the two frigates nearer Tripoli, leaked a false story that 4 more frigates were expected off Gibraltar any day and would be patrolling off Tripoli. He says that the strategy worked, and that the crews left Oran without a vessel. (BW1:616, 8 November 1801)
 
 # Coup in Tripoli
 -  [William Eaton]() first proposes a scheme to get [Yusuf Karamanli]() on board an American vessel to capture him? (BW1:567)
