--- a/Front Page.page
+++ b/Front Page.page
@@ -23,6 +23,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Engagements with Tripoli]()
 - [Relations with other Barbary states]()
 - [Relations with government at home]()
+- [Relationships among North Africa]()
 
 ## Reference
 - [Important dates]()
