ship works heavy

--- a/Science.page
+++ b/Science.page
@@ -13,6 +13,7 @@
 ## Disease in the navy
 - BW1:570: [Richard Dale]() leaves the blockade of Tripoli early because he has 152 men on the sick list
     - First Lieutenant [Newton Keene]() records that this sicknes was "some kind of enfluensa" and that only 2 or 3 men died (BW1:584) 
+- BW1:618: [William Bainbridge]() records that "many of our people being sick, find the ship works heavy, for want of their assistance"--somewhat surprisingly they still got pratique immediately at Gibraltar the next day (10 November 1801)
 
 # Quarantine
 ## [Regulations about quarantine]()
