--- a/Convoy.page
+++ b/Convoy.page
@@ -8,3 +8,8 @@ One of the important but boring duties of the American squadron was to convoy Am
 
 ### Difficulty of wrangling merchants
 - BW1:615: [Richard Dale](): "it is Impossible to keep a number of Merchant ships togeather, in bad weather and long nights [during the winter]" (6 Nov 1801)
+- BW1:619: [John Shaw]() given instructions from [Richard Dale]() about convoy procedure:
+    - Notify consuls of the route he will take out of the Mediterranean
+    - Remain only 2 or 3 days at each port unless 4 or 5 American captains request he wait
+    - Be careful where you anchor because of bad winter weather
+    - Write to upcoming consuls asking them to have any ships wishing convoy ready to go when he arrives
