--- a/Algiers.page
+++ b/Algiers.page
@@ -1,1 +1,2 @@
 - BW1:617-18: [Richard O'Brien]() records that the dey has requested 500 mahogany boards of 1-4 inches, as well as long planks and spikes (7 November 1801)
+- BW1:620-21: [Richard O'Brien]() accepts $30,000 from [Richard Dale]() as payment for the annual stipend to the Dey
