--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -5,3 +5,8 @@
 - [Richard Dale]() writes to the bashaw of Tripoli asking to know why he has declared war, but also reminding the bashaw that he as a naval commander has no power to make treaties, 28 July 1801 (BW1:533-534)
 - [Richard Dale]() uses [Nicholas Nissen]() to try to effect a prisoner exchange with [Yusuf Karamanli](), 2 September 1801 (BW1:568, BW1:594)
 - [James Leander Cathcart]() suggests to [Richard Dale]() that he should try to intercept the Tripoline ambassador, who was going to Algiers to try to "influence the Dey of Algiers espouse his master's cause," 13 October 1801 (BW1:598)--that's one way to keep diplomacy from succeeding...
+- 
+
+# Diplomacy with other nations
+## Denmark
+- [William Eaton]() is recognized and rewarded by the king of Denmark for his service to them in some capacity (BW1:621)
