--- a/Relations with other Barbary states.page
+++ b/Relations with other Barbary states.page
@@ -10,3 +10,5 @@ Passports were a sticking point between the USA and all of the Barbary regencies
 
 - Example of using passports for diplomatic force: [Richard O'Brien]() refused to issue passports to Algiers for Tripolitan ships docked in an Algerian port; therefore he did not wish to ask the Dey of Algiers for a passport for the *Peace and Plenty*, delivering tribute payments to Tunis. Therefore, the *George Washington* had to convoy the *Peace and Plenty* to Tunis in order to prevent capture.
     - O'Brien did not like this; he wanted to show "him and his Ministry both Turkish and Jewish ... that we finally would make force to be our passport." (BW1:616, 8 Nov 1801)
+    - 
+- [Richard O'Brien]() complains to the Secretary of State that the passports issued to American merchants are defective, because their parts don't match the part the Algerian corsairs have; other nations with this problem have had vessels' cargo condemned (25 November 1801, BW1:625)
