--- a/Regulations about quarantine.page
+++ b/Regulations about quarantine.page
@@ -1,3 +1,3 @@
 - [Malaga](): [William Kirkpatrick]() writes that as of 22 September 1801, quarantine on American merchant vessels coming from America is reduced to 10 days (from an unnamed much longer quarantine period) (BW1:578)
 - [Algeciras](): [Richard Dale]() argues that the [USS President]() should not have to undergo quarantine as there has never been any infectious disease on board since she was built (this is definitely not true, since she had to leave the blockade of Tripoli because there were so many people on the sick list; possible he's referring only to the plague?) (BW1:596)--this is an open question: what constitutes sickness that would cause a ship to be quarantined? 
-- 
+- [Mahon](): [USS President]() put under quarantine of 15 days for "having communication at Algiers" (he ended up sailing before his quarantine was up) (BW1:628, 7 December 1801)
