--- a/Front Page.page
+++ b/Front Page.page
@@ -24,6 +24,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Relations with other Barbary states]()
 - [Relations with government at home]()
 - [Relationships among North Africa]()
+- [Physical accidents to ships or persons]()
 
 ## Reference
 - [Important dates]()
