--- a/Front Page.page
+++ b/Front Page.page
@@ -32,3 +32,5 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Places]()
 - [Ships]()
 - [Abbreviations]()
+
+## [Random stuff]()
