--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -34,3 +34,8 @@ more resembles the Savages than a civilized nation." (BW1:609)
 
 ### Denmark
 - 28 August 1801: Danish commodore will not swap information with [Richard Dale](), though [Nicholas Nissen]() has been a help to the squadron (BW1:562)
+- 
+
+## France
+- 8 December 1801: [Richard Dale]() is affronted by the actions of the commandant of Marine at Toulon who sent a guard to ensure the Americans followed the rules of quarantine: "Such a custom may be very necessary on Board of Merchant Vessels but will not be permitted on board of Ships of War Belonging to the United States, nor will it be, on Board the President, so long as I Have the honor to Command
+therefore I send him on shore" (BW1:630)
