--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -37,5 +37,5 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - 
 
 ## France
-- 8 December 1801: [Richard Dale]() is affronted by the actions of the commandant of Marine at Toulon who sent a guard to ensure the Americans followed the rules of quarantine: "Such a custom may be very necessary on Board of Merchant Vessels but will not be permitted on board of Ships of War Belonging to the United States, nor will it be, on Board the President, so long as I Have the honor to Command
-therefore I send him on shore" (BW1:630)
+- 8 December 1801: [Richard Dale]() is affronted by the actions of the commandant of Marine at Toulon who sent a guard to ensure the Americans followed the rules of quarantine: "Such a custom may be very necessary on Board of Merchant Vessels but will not be permitted on board of Ships of War Belonging to the United States, nor will it be, on Board the President, so long as I Have the honor to Command therefore I send him on shore" (BW1:630)
+- It was important to Dale that the USA be treated as part of the international community, not as a second-class citizen, by the commandant of Toulon: "I expect to receive the same Hospitality and Attention in this port that is given to the most favoured Nation." (BW1:630)
