--- a/Convoy.page
+++ b/Convoy.page
@@ -2,6 +2,10 @@ One of the important but boring duties of the American squadron was to convoy Am
 
 "It was requisite That the Essex should convoy out of this sea. The american Vessels so long detained on acct of the Threatenings of Tripoli and The Snarlings of Algiers--& murmors of Tunis." --[Richard O'Brien]() to Secretary of State, September 26, 1801 (BW1:582)
 
+## System
+Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American convoys were on the smaller side, as the Americans didn't have enough ships to support the larger ones.
+- 1801: [USS Philadelphia]() convoys 10 American ships and 5 Swedish ships from Malaga to Alicant, Leghorn, and Naples (BW1:632)
+
 ## Irritations and delays
 ### Lack of ships to perform duty
 - BW1:593: [Richard Dale]() to [William Kirkpatrick](): "it is my wish and Intention to give protection to all American Vessels, Either bound up the Mediterranean or down, as much, as in my Power lays, but the Commanders must have patience, I have to observe to you there is only three Ships of War in those seas at present belonging to the United States, one of them must be kept in or about this place, one off and about Tripoli so you see there is only one to go on the convoy Business."
