deficiency of supplies

--- a/Strategy.page
+++ b/Strategy.page
@@ -5,6 +5,7 @@
 - [Storage in the Mediterranean]()
 - [Where to get water]()
 - [Where to get supplies]()
+- [Deficiency of supplies]()
 
 # Purpose of cruises
 ## Cruise 1 ([Richard Dale]())
