--- a/Front Page.page
+++ b/Front Page.page
@@ -25,6 +25,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Relations with government at home]()
 - [Relationships among North Africa]()
 - [Physical accidents to ships or persons]()
+- [Characteristics of Barbary ships]()
 
 ## Reference
 - [Important dates]()
