--- a/Characteristics of Barbary ships.page
+++ b/Characteristics of Barbary ships.page
@@ -1,4 +1,5 @@
 # Acquisition
 
 # Manpower
-
+- Often manned by European dissidents and expatriates
+    - "I Suspect many Vagabonds will enter that Service [cruising against American ships] for want of employment in the Privateering line" (BW1:633)
