--- a/Science.page
+++ b/Science.page
@@ -15,7 +15,8 @@
     - First Lieutenant [Newton Keene]() records that this sicknes was "some kind of enfluensa" and that only 2 or 3 men died (BW1:584) 
 - BW1:618: [William Bainbridge]() records that "many of our people being sick, find the ship works heavy, for want of their assistance"--somewhat surprisingly they still got pratique immediately at Gibraltar the next day (10 November 1801)
     - 16 November: All officers sick but one lieutenant and 2 midshipmen (BW1:621)
-
+    - Around this same time, all the frigates had large sick lists: around 100 on *President*, 80 on *Essex*, and 70 on *Philadelphia* (BW1:634)
+    
 # Quarantine
 ## [Regulations about quarantine]()
 ## [Expectations about quarantine]()
