--- a/Tripolitan strategy.page
+++ b/Tripolitan strategy.page
@@ -4,6 +4,7 @@
 
 # Alternate vessels
 - BW1:613: Purchase of a polacre in Leghorn (1 Nov 1801)
+- BW1:633: Possible purchase of a 22-gun vessel in Smyrna, manned by Europeans (10 December 1801)
 
 # Alternate crews
 - BW1:615: Renegados from all nations join the crews of Tripolitan cruisers, and therefore they might be able to stay out in the winter time (a possibility [Richard Dale]() had previously thought unlikely), making [Convoy]() duty a difficulty
