--- a/Tripolitan strategy.page
+++ b/Tripolitan strategy.page
@@ -8,6 +8,7 @@
 
 # Alternate crews
 - BW1:615: Renegados from all nations join the crews of Tripolitan cruisers, and therefore they might be able to stay out in the winter time (a possibility [Richard Dale]() had previously thought unlikely), making [Convoy]() duty a difficulty
+- "I Suspect many Vagabonds will enter that Service for want of employment in the Privateering line, this only will enable them to put many Cruizers to Sea, being themselves destitute of good Sailors" (10 December 1801, BW1:633)
 
 # Joining forces with other Barbary States
 - BW1:615: [Richard Dale]() is concerned that Tripoli is trying to get the other Barbary States to join forces against the USA, and that he has already succeeded in convincing Tunis to join (6 Nov 1801)
