President in ordinary

--- a/USS President.page
+++ b/USS President.page
@@ -2,3 +2,5 @@
 - Flagship for first cruise
 - At Algiers 9 July 1801, departing for Tunis that day (BW1:507)
 - Arrived Tunis 17 July 1801 (BW1:521)
+- 
+- Ordered to be laid up in ordinary, 14 December 1801 (BW1:638)
