--- a/Strategy.page
+++ b/Strategy.page
@@ -8,7 +8,7 @@
 - [Deficiency of supplies]()
 
 # Purpose of cruises
-## [Cruise 1 ([Richard Dale]()]())
+## [Cruise 1 (Richard Dale)]()
 In the orders of this cruise, it seems pretty clear that the government feels it likely that the temporary declaration of war with Tripoli will be revoked by the time the squadron gets there; hence the couching of the orders mostly in terms of instruction and encouragement--the president and secretary of the navy genuinely think a blockade will not be necessary. (See BW1:471, Secretary of State to [Rufus King](), 21 May 1801)
 
 This feeling of pointlessness was shared by the crew as well, e.g., [William Turner](), surgeon for the *Philadelphia*: "I Presume we shall Have very little to do & what I learn of the Disposion of the Commodore He will Indulge the different Ships, under His Command with the Gratification of visiting most of the Ports in the Levant Smyrna Constantinople, Egypt &c - The French Ports Particularly" (BW1:480).
