--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -18,3 +18,4 @@ was sent is full of weevil."
 - BW1:595: [Richard Dale]() calls on the dockmaster at Gibraltar to honor the agreement issed by the king and asks for a new foresail fore and a new main topsail, 5 October 1801 (they oblige on Oct 7, BW1:596)
 - BW1:603: Dale instructs [Samuel Barron]() that Syracuse is a good place to get supplies, "you may get every supply that you may want in the, Eating way, and that very cheap," 25 October 1801
 - BW1:612: Dale expresses concern about overcharging? at Gibraltar but seems to indicate that the problem has been corrected with no fuss, 30 October 1801.
+- BW1:640: At the end of cruise 1, the store ship *James* takes stores from the USA to the Mediterranean, but the homeward bound ships have to deposit any extra stores with [John Gavino]() at Gibraltar to disperse amongst the ships that are staying (15 December 1801) 
