--- a/Mackenzie and Glennie.page
+++ b/Mackenzie and Glennie.page
@@ -1,2 +1,3 @@
 - Based in London
 - BW1:462: 20 May 1801: [Richard Dale]() authorized to draw on this house for funds necessary to his squadron
+    - Though M&G are the official? banking house for the navy, the squadron also uses several other houses, including Luce & Crassan Cadet, while in the Med (BW1:643)
