--- a/Tripolitan strategy.page
+++ b/Tripolitan strategy.page
@@ -1,5 +1,5 @@
 # Blockade running
-
+- BW1:645: [Nicholas Nissen]() reports that there were 5 vessels out in the sea to capture Americans, though one was lost with all hands (20 December 1801)
 
 
 # Alternate vessels
