--- a/Convoy.page
+++ b/Convoy.page
@@ -5,6 +5,7 @@ One of the important but boring duties of the American squadron was to convoy Am
 ## System
 Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American convoys were on the smaller side, as the Americans didn't have enough ships to support the larger ones.
 - 1801: [USS Philadelphia]() convoys 10 American ships and 5 Swedish ships from Malaga to Alicant, Leghorn, and Naples (BW1:632)
+- 1801: Circular warns ships against traveling in the Adriatic without convoy
 
 ## Irritations and delays
 ### Lack of ships to perform duty
