specific list of deficiencies

--- a/Deficiency of supplies.page
+++ b/Deficiency of supplies.page
@@ -1,2 +1,9 @@
 Supplies were difficult to come by, and the supplies brought on board at the beginning of the cruise were not always high quality, so even those brought from the United States sometimes had to be replaced when ships were still in the Mediterranean. Sometimes ships sailed without adequate provision of naval stores such as cord (see [Samuel Barron](), BW1:632).
 
+- BW2:11-12: [Alexander Murray]() complains to the Secretary of the Navy about the rations based on his observations during his previous cruise
+    - Beef: Poor quality and insufficient quantity (British navy does better)
+    - Pork: "sufficient"
+    - Fish: excluded per regulations
+    - Potatoes and onions and other vegetables: ought to be allowed to be purchased locally
+    - Desired: "Kiln dry'd Indian Meal" with Molasses (for breakfast)
+    - "A soldier may have his resources, but the sailor hath no subterfuge when pinched"?
