--- a/Science.page
+++ b/Science.page
@@ -16,6 +16,7 @@
 - BW1:618: [William Bainbridge]() records that "many of our people being sick, find the ship works heavy, for want of their assistance"--somewhat surprisingly they still got pratique immediately at Gibraltar the next day (10 November 1801)
     - 16 November: All officers sick but one lieutenant and 2 midshipmen (BW1:621)
     - Around this same time, all the frigates had large sick lists: around 100 on *President*, 80 on *Essex*, and 70 on *Philadelphia* (BW1:634)
+- BW2:11: [Alexander Murray]() notes that sailors who live "irregular lives while on shore" often end up on the doctor's list and stay there for a long time if their diet does not improve (1 January 1802)
     
 # Quarantine
 ## [Regulations about quarantine]()
