--- a/Convoy.page
+++ b/Convoy.page
@@ -18,3 +18,4 @@ Anywhere from 5-10 ships to hundreds could be part of a convoy. Typical American
     - Remain only 2 or 3 days at each port unless 4 or 5 American captains request he wait
     - Be careful where you anchor because of bad winter weather
     - Write to upcoming consuls asking them to have any ships wishing convoy ready to go when he arrives
+- Lt. [John Shaw]() had to write to the prime minister of the Two Sicilies to ask whether a ship that had been detained by that government would be available to sail with his convoy due to leave at the first fair wind, 7 January 1802 (BW2:14)
