--- a/Strategy.page
+++ b/Strategy.page
@@ -27,6 +27,7 @@ By the end of the first cruise, Dale had a different perspective: "It is very pl
 - [Richard Dale]() argues for a close blockade: "Should the United States Determin to carry on the War against Tripoli it will be highly necessary to keep it closly Blockaded, not to suffer any kind of Vessels, of any Nation to go in or come out, to do this it will take Two Frigates and two Sloops of War , two to be of[f] the Harbour and two to cruise along the Coast, to the Eastwd and Westward they will be under the necessity of going Into port for water &c that must be done by turns, also I think it would be advisable to have a small Vessel constructed to carry a Bomb to heave a few shells In the Town now & then" (BW1:553)
 
 ## Effectiveness
+- Blockades were seasonal. [Weather]() made a big difference in how ships operated.
 - [William Eaton]() writes, 24 July 1801, that Tripolitan government is concerned by the blockade because they don't have much food and get most of their food stores from Tunis (BW1:529)
     - Tunis also concerned because they don't want the blockade of Tripoli to harm them
 - Eaton warns Dale that the Tripolitan admiral and his crews are trying to run the blockade by going home from Gibraltar in a Greek ship they have chartered for the purpose (BW1:566)
