--- a/Weather.page
+++ b/Weather.page
@@ -1,3 +1,4 @@
 Weather was a significant factor in whether or not American naval vessels were on station in the blockade.
 
 - BW2:15: [Samuel Barron]() reports that stormy weather destroyed many vessels at Malta in late December 1801, including rudder and sail damage to several British naval vessels (including a 74)
+    - "in fact such a winter has never been known before and I suppose has kept in our Tripoline friends" 
