--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -43,3 +43,4 @@ more resembles the Savages than a civilized nation." (BW1:609)
 
 ## Great Britain
 - Mahon: Governor of Mahon assures [Richard Dale]() that if there were corsairs fitting out at Mahon to capture Americans, he would certainly put a stop to it, and that he would ensure that a ship being built for the Bey of Tunis was not actually for Tripoli (BW1:634)
+- Malta: [Samuel Barron]() receives a favorable reception from [Lord Keith]() and the British officers at Malta
