--- a/Deficiency of supplies.page
+++ b/Deficiency of supplies.page
@@ -7,3 +7,4 @@ Supplies were difficult to come by, and the supplies brought on board at the beg
     - Potatoes and onions and other vegetables: ought to be allowed to be purchased locally
     - Desired: "Kiln dry'd Indian Meal" with Molasses (for breakfast)
     - "A soldier may have his resources, but the sailor hath no subterfuge when pinched"?
+- BW2:17: [Alexander Murray]() is really concerned about supplies: he states that provisions run out quickly once ships reach the Med, and therefore he's not taking a full ration of everything since he's going to have to refill supplies in the Med anyway.
