officers and diplomats

--- a/Diplomacy.page
+++ b/Diplomacy.page
@@ -7,6 +7,8 @@
 - [James Leander Cathcart]() suggests to [Richard Dale]() that he should try to intercept the Tripoline ambassador, who was going to Algiers to try to "influence the Dey of Algiers espouse his master's cause," 13 October 1801 (BW1:598)--that's one way to keep diplomacy from succeeding...
 - 
 
+# [Naval officers' relations with their own diplomats]()
+
 # Diplomacy with other nations
 ## Denmark
 - [William Eaton]() is recognized and rewarded by the king of Denmark for his service to them in some capacity (BW1:621)
