weather in Naples

--- a/Weather.page
+++ b/Weather.page
@@ -2,3 +2,5 @@ Weather was a significant factor in whether or not American naval vessels were o
 
 - BW2:15: [Samuel Barron]() reports that stormy weather destroyed many vessels at Malta in late December 1801, including rudder and sail damage to several British naval vessels (including a 74)
     - "in fact such a winter has never been known before and I suppose has kept in our Tripoline friends" 
+
+- BW2:18: Lt. [John Shaw]() bullies the Neapolitan authorities into letting him into the harbor because the weather is so poor that he feels his ship will be broken up if it can't get into the harbor (11 January 1802)
