--- a/People.page
+++ b/People.page
@@ -1,10 +1,11 @@
 # United States
 ## Diplomats
-- [James Leander Cathcart]()
-- [Richard O'Brien]()
-- [John Lamb]()
 - [Thomas Barclay]()
+- [James Leander Cathcart]()
 - [Edward Church]()
+- [John Lamb]()
+- [John S. M. Matthieu]()
+- [Richard O'Brien]()
 
 ## U.S. Navy
 
