--- a/Front Page.page
+++ b/Front Page.page
@@ -13,19 +13,22 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Science]()
 
 ## Research topics
-- [Pre-war relations with European nations]()
-- [War relations with European nations]()
-- [Negotiation strategies]()
 - [Captivity]()
-- [Role of religion]()
+- [Characteristics of Barbary ships]()
+- [Engagements with Tripoli]()
 - [Gender]()
 - [Honor]()
-- [Engagements with Tripoli]()
-- [Relations with other Barbary states]()
-- [Relations with government at home]()
-- [Relationships among North Africa]()
+- [Negotiation strategies]()
 - [Physical accidents to ships or persons]()
-- [Characteristics of Barbary ships]()
+- [Pre-war relations with European nations]()
+- [Relationships among North Africa]()
+- [Relations with government at home]()
+- [Relations with other Barbary states]()
+- [Role of religion]()
+- [War relations with European nations]()
+- [Weather]()
+
+
 
 ## Reference
 - [Important dates]()
