--- a/John S. M. Matthieu.page
+++ b/John S. M. Matthieu.page
@@ -1,2 +1,2 @@
 - American consul at Naples (EAFSD)
-- [John Shaw]() describes him (without naming him) as "a person of no Character or Influence" (BW2:18)
+- [John Shaw]() describes him (without naming him) as "a person of no Character or Influence" and laments that he would not have been able to pay his bills through Matthieu without the help of Mr. Degan from the house of Purviance (BW2:18)
