--- a/Front Page.page
+++ b/Front Page.page
@@ -6,6 +6,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 
 ## Potential chapters
 
+- [Introduction]()
 - [Economy]()
 - [Strategy]()
 - [Diplomacy]()
