--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -20,3 +20,4 @@ was sent is full of weevil."
 - BW1:612: Dale expresses concern about overcharging? at Gibraltar but seems to indicate that the problem has been corrected with no fuss, 30 October 1801.
 - BW1:640: At the end of cruise 1, the store ship *James* takes stores from the USA to the Mediterranean, but the homeward bound ships have to deposit any extra stores with [John Gavino]() at Gibraltar to disperse amongst the ships that are staying (15 December 1801) 
 - BW1:644: [USS *Essex*]() gets vegetables from shore at Algeciras, 21 December 1801
+- BW2:24: [Richard Dale]() suggests that the [USS *Philadelphia*]() stop for supplies at Leghorn before coming back to the USA, 18 January 1802
