--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -32,7 +32,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
     - BW1:637: Eaton too seems to caution against a Swedish alliance: "what American can cheerfully admit the idea that the United States will think it proper to divide with any nation whatever the honor and the advantages of chastising Tripoli: The object itself does not seem to require such a parade" (13 December 1801) 
 - BW1:626: Relations were friendly enough that Lt. [Stephen Decatur]() went on board the Swedish frigate *[Thetis]()*, 27 November 1801
     - BW1:627: Continued agreeable relations between the *[USS Essex]()* and the *Thetis*, 30 November 1801
-
+- BW2:20: [Richard Dale]() expects to consult with Admiral [Soderstrom]() about the best way to jointly protect the two nations' commerce, 13 January 1802
 ### Denmark
 - 28 August 1801: Danish commodore will not swap information with [Richard Dale](), though [Nicholas Nissen]() has been a help to the squadron (BW1:562)
 - 
