--- a/People.page
+++ b/People.page
@@ -33,7 +33,7 @@
 - [Nicholas Nissen]()
 
 ## Sweden
-- [Rudolf Cederström]()
+- [Rudolf Cederström]() (often Admiral [Soderstrom]())
 
 # Barbary States
 ## Algiers
