--- a/People.page
+++ b/People.page
@@ -16,6 +16,13 @@
 - [John Padwanni]()
 
 # Europe
+## Denmark
+- [Baron de Huslach]()
+- [Nicholas Nissen]()
+
+## France
+- [Count D'Expilly]()
+
 ## Great Britain
 - [Charles Logie]()
 - [Perkens Magra]()
@@ -24,16 +31,12 @@
 - [Henry Patu]()
 - [James Saumerez]()
 
-## France
-- [Count D'Expilly]()
-
-
-## Denmark
-- [Baron de Huslach]()
-- [Nicholas Nissen]()
 
 ## Sweden
 - [Rudolf Cederström]() (often Admiral [Soderstrom]())
+
+## Two Sicilies
+- Sir John [Acton]()
 
 # Barbary States
 ## Algiers
