--- a/Front Page.page
+++ b/Front Page.page
@@ -27,6 +27,7 @@ Welcome to the research wiki of Abby Mullen. Here I will be recording and organi
 - [Relations with government at home]()
 - [Relations with other Barbary states]()
 - [Role of religion]()
+- [Stores]()
 - [War relations with European nations]()
 - [Weather]()
 
