--- a/Where to get supplies.page
+++ b/Where to get supplies.page
@@ -4,9 +4,7 @@ One of the constant questions for the squadron was whether to get supplies from 
 - BW1:548: *American Packet* dispatched from Washington DC to Gibraltar with supplies for squadron, 14 August 1801
     - BW1:594-95: *American Packet* captured by Spanish privateers and brought to Algeciras, 5 October 1801; she turns out to have been carrying some private cargo as well (which was a violation of the blockade? [Richard Dale]() seems to think this was a problem and an ethical violation; not quite sure why).
     - BW1:596: [Richard Dale]() asks the governor of Algeciras to release the *American Packet* to him so he can make the [USS President]() ready for sea, reminding him that Dale had previously told the governor that this store ship was coming, and also asking for assistance in watering the President
-    - BW1:606: Dale is not pleased with the quality of supplies in the ship: "I cannot say what is the reason there was no Butter, Cheese, Rum,
-Mollasses, or Candles sent out in the store ship. - the Bread that
-was sent is full of weevil." 
+    - BW1:606: Dale is not pleased with the quality of supplies in the ship: "I cannot say what is the reason there was no Butter, Cheese, Rum, Mollasses, or Candles sent out in the store ship. - the Bread that was sent is full of weevil." 
 
 
 ## In the Mediterranean
@@ -21,3 +19,4 @@ was sent is full of weevil."
 - BW1:640: At the end of cruise 1, the store ship *James* takes stores from the USA to the Mediterranean, but the homeward bound ships have to deposit any extra stores with [John Gavino]() at Gibraltar to disperse amongst the ships that are staying (15 December 1801) 
 - BW1:644: [USS *Essex*]() gets vegetables from shore at Algeciras, 21 December 1801
 - BW2:24: [Richard Dale]() suggests that the [USS *Philadelphia*]() stop for supplies at Leghorn before coming back to the USA, 18 January 1802
+- BW2:26 Dale says that [Daniel McNeill]() should be able to get supplies from the British agent (uncertain at what port), 18 January 1802
