--- a/Ships.page
+++ b/Ships.page
@@ -1,6 +1,7 @@
 # United States
 ## Navy
 - [USS *Boston*]()
+- [USS *Chesapeake*]()
 - [USS *Enterprise*]()
 - [USS *Essex*]()
 - [USS *George Washington*]()
