--- a/Ships.page
+++ b/Ships.page
@@ -2,6 +2,7 @@
 ## Navy
 - [USS *Boston*]()
 - [USS *Chesapeake*]()
+- [USS *Constellation*]()
 - [USS *Enterprise*]()
 - [USS *Essex*]()
 - [USS *George Washington*]()
