--- a/Stores.page
+++ b/Stores.page
@@ -1,4 +1,4 @@
-- One of the key elements of the blockade is having enough supplies; where do these supplies come from?
+One of the key elements of the blockade is having enough supplies; where do these supplies come from?
 - [Storage in the Mediterranean]()
 - [Where to get water]()
 - [Where to get supplies]()
