--- a/Where to get water.page
+++ b/Where to get water.page
@@ -1,11 +1,10 @@
-Dale rightly recognizes that supply limits will keep him from being able to maintain a continuous blockade.
+- Dale rightly recognizes that supply limits will keep him from being able to maintain a continuous blockade.
+    - BW1:522: [Richard Dale]() intends to get water at either [Malta]() or [Syracuse](), 19 July 1801, but he tells [Samuel Barron]() to get as much water and food as he can at [Port Farina]()
+        - Dale estimates he can stay out for about 5 weeks before needing more water
+    - BW1:530: [Samuel Barron]() had to receive a coasting pilot at Gibraltar to get water from [Tetuan]() because the governor of [Gibraltar]() would not allow warships to water there, 24 July 1801
+        - Contra [Rufus King](), who wrote that the British were opening the stores of Gibraltar, [Malta]() and [Minorca]() to American ships of war, 24 July 1801 (BW1:531)
 
-- BW1:522: [Richard Dale]() intends to get water at either [Malta]() or [Syracuse](), 19 July 1801, but he tells [Samuel Barron]() to get as much water and food as he can at [Port Farina]()
-    - Dale estimates he can stay out for about 5 weeks before needing more water
-- BW1:530: [Samuel Barron]() had to receive a coasting pilot at Gibraltar to get water from [Tetuan]() because the governor of [Gibraltar]() would not allow warships to water there, 24 July 1801
-    - Contra [Rufus King](), who wrote that the British were opening the stores of Gibraltar, [Malta]() and [Minorca]() to American ships of war, 24 July 1801 (BW1:531)
-
-- BW1:553: Dale sent [USS *Enterprise*]() to Malta with the idea of its bringing back enough water for [USS *President*]() to stay on the blockade, but *Enterprise* was unable to bring back enough water to prevent *President* from needing to leave its station (18 August 1801)
-    - Dale ends up at Malta as well, where he learns that though water is to be had at Malta, other supplies are not, and he recommends Syracuse as an alternative 
+    - BW1:553: Dale sent [USS *Enterprise*]() to Malta with the idea of its bringing back enough water for [USS *President*]() to stay on the blockade, but *Enterprise* was unable to bring back enough water to prevent *President* from needing to leave its station (18 August 1801)
+        - Dale ends up at Malta as well, where he learns that though water is to be had at Malta, other supplies are not, and he recommends Syracuse as an alternative 
     
-BW1:573: [USS *Philadelphia*]() and [USS *Essex*]() able to obtain water in Malaga after only a few hours waiting for pratique, 8 September 1801
+- BW1:573: [USS *Philadelphia*]() and [USS *Essex*]() able to obtain water in Malaga after only a few hours waiting for pratique, 8 September 1801
