--- a/Where to get water.page
+++ b/Where to get water.page
@@ -1,3 +1,5 @@
+## In the Mediterranean
+
 - Dale rightly recognizes that supply limits will keep him from being able to maintain a continuous blockade.
     - BW1:522: [Richard Dale]() intends to get water at either [Malta]() or [Syracuse](), 19 July 1801, but he tells [Samuel Barron]() to get as much water and food as he can at [Port Farina]()
         - Dale estimates he can stay out for about 5 weeks before needing more water
@@ -8,3 +10,6 @@
         - Dale ends up at Malta as well, where he learns that though water is to be had at Malta, other supplies are not, and he recommends Syracuse as an alternative 
     
 - BW1:573: [USS *Philadelphia*]() and [USS *Essex*]() able to obtain water in Malaga after only a few hours waiting for pratique, 8 September 1801
+
+## At home
+- BW2:27: Secretary of the Navy tells the commander of [USS *Chesapeake*]() that the ships have been taking on too much water and not enough provisions, so they should take only 10 weeks of water when they leave the USA, 22 January 1802
