--- a/War relations with European nations.page
+++ b/War relations with European nations.page
@@ -33,6 +33,7 @@ more resembles the Savages than a civilized nation." (BW1:609)
 - BW1:626: Relations were friendly enough that Lt. [Stephen Decatur]() went on board the Swedish frigate *[Thetis]()*, 27 November 1801
     - BW1:627: Continued agreeable relations between the *[USS Essex]()* and the *Thetis*, 30 November 1801
 - BW2:20: [Richard Dale]() expects to consult with Admiral [Soderstrom]() about the best way to jointly protect the two nations' commerce, 13 January 1802
+    - BW2:28: Soderstrom reports that he has ordered a frigate to Tripoli and is also going there himself; he has put two frigates on convoy duty at Malaga (25 January 1802)
 
 ### Denmark
 - 28 August 1801: Danish commodore will not swap information with [Richard Dale](), though [Nicholas Nissen]() has been a help to the squadron (BW1:562)
